repair gap in landing section in small and medium screen

--- a/css/sass/import/_landing.scss
+++ b/css/sass/import/_landing.scss
@@ -27,7 +27,7 @@ section.landing {
       padding-bottom: 100px;
       gap: 50px;
       @media (max-width: 991.98px) {
-        justify-content: center;
+        gap: 0;
       }
       .text {
         margin: auto;
